feat: create application from applicant controller