@@ -1,10 +1,13 @@
 package sc2002.fcsi.grp3.service;
 
 import sc2002.fcsi.grp3.datastore.DataStore;
+import sc2002.fcsi.grp3.model.Flat;
 import sc2002.fcsi.grp3.model.Project;
+import sc2002.fcsi.grp3.model.User;
+import sc2002.fcsi.grp3.model.enums.FlatType;
+import sc2002.fcsi.grp3.model.enums.MaritalStatus;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class ProjectService {
@@ -14,11 +17,28 @@ public class ProjectService {
         this.db = db;
     }
 
-    public List<Project> getVisibleProjects() {
-        return db.getProjects()
+    public List<Project> getVisibleProjects(User user) {
+        List<Project> visibleProjects = db.getProjects()
                 .stream()
                 .filter(Project::isVisible)
-                .collect(Collectors.toList());
+                .toList();
+        if (user.isEligibleFor2R()) {
+            return visibleProjects
+                    .stream()
+                    .filter(p -> p.hasAvailableFlatType(FlatType.TWO_ROOM))
+                    .toList();
+        }
+        return visibleProjects;
+    }
+
+    public List<Project> getProjectsManagedBy(String officerNric) {
+        return db.getProjects().stream()
+                .filter(project -> project.getOfficerNrics().contains(officerNric))
+                .toList();
+    }
+
+    public List<Project> getAllProjects() {
+        return db.getProjects();
     }
 
     public Optional<Project> getProjectById(int id) {
@@ -26,5 +46,27 @@ public class ProjectService {
                 .stream()
                 .filter(p -> p.getId() == id)
                 .findFirst();
+    }
+
+    public List<Flat> getAvailableFlats(User user, Project project) {
+        // get flats that have available units
+        List<Flat> availableFlats = project.getFlats()
+                .stream()
+                .filter(flat -> flat.getUnitsAvailable() > 0)
+                .toList();
+
+        // get flats that are available to user
+        if (user.isEligibleForAny()) {
+            return availableFlats ;
+        }
+
+        if (user.isEligibleFor2R()) {
+            return availableFlats
+                    .stream()
+                    .filter(flat -> flat.getType() == FlatType.TWO_ROOM)
+                    .toList();
+        }
+
+        return List.of();
     }
 }
